k8s/infrastructure.yml
# Deployment of Redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: az-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-azure
  template:
    metadata:
      labels:
        app: redis-azure
    spec:
      volumes:
        - name: redis-vol
          persistentVolumeClaim:
            claimName: redis-pvc
      containers:
      - name: redis
        image: redis:latest
        args: ["--requirepass", "$(REDIS_PWD)"]
        volumeMounts:
        - name: redis-vol
          mountPath: /data
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: redis
---
# Service for Redis (Cluster IP)
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec: # Par default le type est ClusterIP, il n'y a aucun raison de le spécifier (type: ClusterIP)
  ports:
  - port: 6379
  selector:
    app: redis-azure

---
# Deployment of Voting App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: votingapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: votingapp
  template:
    metadata:
      labels:
        app: votingapp
    spec:
      containers:
      - name: alfred-voting
        image: ghcr.io/devsoleo/brief-9-test:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: votingapp
