k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: X-Canary
    nginx.ingress.kubernetes.io/canary-weight: "50"
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: devsoleo.fr
      http:
        paths:
          - backend:
              service:
                name: canary-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
